[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/ufo.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 45.5438

[node name="Path2D" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotation = 3.12266

[node name="StaticBody2D" type="StaticBody2D" parent="PathFollow2D"]
rotation = -3.12266
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="PathFollow2D"]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="screen_entered" from="PathFollow2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="PathFollow2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="PathFollow2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
